Lobbster1/css/styles.css
/* ... */
.modalClose {
  display: inline-block;
  float: right;
  margin-top: -25px;
}
.modalClose::after {
  clear: both;
}

/* Modal Content/Box */
.modal-content {
  background-color: #fefefe;
  margin: 75px auto; /* 15% from the top and centered */
  padding: 20px;
  border: 1px solid #888;
  width: 60%; /* Could be more or less, depending on screen size */
  max-height: 80%;
  overflow: auto;
}

/* hide disclaimer by default=============================*/
.disclaimer {
  display: none;
}

/*Title Fonts=============================================*/
title {
  font-family: Helvetica, sans-serif;
}

/*Header=================================================*/
h2 {
  font-family: sintony, Helvetica, sans-serif;
  font-size: 35px;
  color: black;
  margin: auto;
  text-align: center;
}

h3 {
  font-family: sintony, Helvetica, sans-serif;
  font-size: 20px;
  margin: auto;
  text-align: center;
}

h4 {
  font-family: sintony, Helvetica, sans-serif;
  font-size: 15px;
  margin: auto;
  text-align: center;
}

main {
  background-color: #c8c8c8;
  color: black;
  min-height: 90vh;
}

.pageTitle {
  padding-top: 50px;
  padding-bottom: 50px;
}

.pageTitle h2 {
  text-align: left;
  margin-left: 250px;
}
/*Typical Paragraph Body==================================*/
body {
  /* width:100vw; */
  background-color: #c8c8c8;
}

p {
  font-family: titillium, Helvetica, sans-serif;
  font-size: 20px;
  color: inherit;
}

ul {
  font-family: titillium, Helvetica, sans-serif;
  font-size: 20px;
  color: inherit;
  margin: 0 5% 0 10%;
}

li {
  font-family: titillium, Helvetica, sans-serif;
  font-size: 20px;
  color: inherit;
}

/*styles for report-activities*/
.act {
  display: none;
}

#otherType {
  visibility: hidden;
}

#reportingactResults {
  display: none;
}

/*Nav=====================================================*/
.nav {
  color: white;
  background-color: dodgerblue;
  color: white;
  background: rgba(0, 135, 208, 0.9);
  padding-left: 200px;
  position: sticky;
  /* padding-left:max(20%, 200px); */
  /* width:80%; */
  /* position:fixed; */
  height: 50px;
  top: 0;
  z-index: 1;
}

#nav_burger {
  height: 44px;
  float: right;
  padding: 5px;
}

#nav_burger:hover {
  opacity: 0.5;
}

#nav_burger_hide {
  display: none;
  padding-top: 55px;
  background: rgba(0, 135, 208, 0.9);
  height: auto;
}

.nav_mobile {
  color: white;
  background-color: dodgerblue;
  background: rgba(0, 135, 208, 0.9);
  height: 55px;
  position: sticky;
  top: 0;
  z-index: 1;
  display: none;
  text-align: center;
}

.nav a {
  text-decoration: none;
  font-family: titillium;
  color: white;
  font-size: 25px;
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 6px;
  display: inline-block;
}

.nav_mobile a {
  text-decoration: none;
  font-family: titillium;
  color: white;
  font-size: 25px;
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 6px;
}

.active {
  background-color: #0076d0;
  height: 44px;
}

.nav a:hover {
  background-color: #0076d0;
  height: 44px;
  text-shadow: 2px 2px #333333;
}

.nav_mobile a:hover {
  background-color: #0076d0;
  opacity: 0.8;
  text-shadow: 2px 2px #333333;
}

/*aside nav===============================================*/
aside {
  float: left;
  width: 225px;
  position: fixed;
  top: 50px;
  bottom: 0;
  z-index: 1;
}

#sideNav {
  overflow: auto;
  float: left;
  height: 100%;
  width: 100%;
  margin: 0px;
  padding: 0px;
  padding-top: 50px;
  background-color: #006399;
  transition: 0.5s;
}

#sideNavMobile {
  overflow: auto;
  float: left;
  height: 100%;
  width: 100%;
  margin: 0px;
  padding: 0px;
  background-color: #006399;
  transition: 0.5s;
  display: none;
  margin-top: 5px;
}

#sideNav a {
  padding: 0.5em;
  margin-bottom: 5px;
  width: 99%;
  float: left;
  transition: 0.3s;
  font-size: 22px;
  color: white;
  text-decoration: none;
}

#sideNavMobile a {
  padding: 0.5em;
  margin-bottom: 5px;
  width: 99%;
  float: left;
  transition: 0.3s;
  font-size: 22px;
  color: white;
  text-decoration: none;
}

#sideNav a:hover {
  background-color: dodgerblue;
}

#sideNavMobile a:hover {
  background-color: dodgerblue;
}

#sideNavMobile .closebtn {
  margin: auto;
  margin-right: 10px;
  text-align: right;
  padding-left: 0px;
  padding-right: 10px;
  width: 100%;
  transition: 0.3s;
  font-size: 30px;
}

.openbtn {
  font-size: 20px;
  cursor: pointer;
  background-color: #111;
  color: white;
  padding: 10px 15px;
  border: none;
  position: fixed;
  left: 0;
  border-radius: 0 20px 20px 0;
  background: rgba(0, 135, 208, 0.9);
  top: 58px;
}

.openbtn:hover {
  background-color: #444;
}

#hamburger {
  transition: margin-left 0.5s;
  padding: 16px;
  display: none;
}

/*Slider===========================================*/
#moduleStart {
  width: 70%;
  margin: auto;
  min-height: 400px;
  padding-bottom: 50px;
}

#moduleStartBtn {
  transition-duration: 0.5s;
  width: 200px;
  background-color: rgba(0, 135, 208, 0.9);
  padding-top: 5px;
  padding-bottom: 5px;
  color: white;
  border-style: solid;
  border-color: black;
  border-radius: 15px;
  border-width: 1px;
}

#moduleStartBtn:hover,
.altHover:hover {
  cursor: pointer;
  background-color: rgba(0, 135, 208, 0.6);
}

.moduleStartLinks {
  text-decoration: none;
  width: 100%;
  padding-top: 10px;
  padding-bottom: 10px;
  display: block;
  float: left;
  background-color: rgba(0, 135, 208, 0.9);
  border-style: solid;
  border-color: black;
  border-radius: 15px;
  border-width: 1px;
  margin: 2px;
  text-align: center;
  color: white;
}

.moduleStartLinks:hover {
  cursor: pointer;
  background-color: rgba(0, 135, 208, 0.6);
}

.moduleSlide {
  display: none;
  min-height: 500px;
  box-shadow: inset 0px 0px 10px 5px #888888;
  padding-bottom: 2em;
}

.moduleSlide h3 {
  padding: 10px;
  margin-top: 60px;
}

.transcripts {
  padding-bottom: 60px;
}

.moduleSlide button {
  padding: 10px;
  margin-bottom: 60px;
}

.moduleSlide:first-child {
  display: block;
  min-height: 500px;
}
/* ... */

